Updated About and Contact pages

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,7 +7,7 @@ body {
 }
 
 .bg {
-  background: url("trent.jpg") no-repeat center center fixed;
+  background: url("images/trent.jpg") no-repeat center center fixed;
   height: 100vh;
   -webkit-background-size: cover;
   -moz-background-size: cover;
